--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,10 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+[v-cloak] {
+  display: none;
 }
 
 .contenedor {
@@ -37,6 +43,7 @@ html {
 }
 
 .app {
+  max-width: 1400px;
   width: 80vw;
   height: 80vh;
   background: rgba(255, 255, 255, 0.2);
@@ -52,86 +59,172 @@ html {
   justify-content: space-between;
 }
 
-header{
-    width: 100%;
-    height: 60px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px 16px 0px 0px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1.3px solid rgba(255, 255, 255, 0.3);
-    border-bottom: none;
+header {
+  width: 100%;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px 16px 0px 0px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1.3px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
 }
 
 header nav {
-    width: 80%;
-    margin: 0 auto;
-    height: inherit;
+  width: 80%;
+  margin: 0 auto;
+  height: inherit;
 }
 
-header nav ul{
-    width: 100%;
-    height: inherit;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+header nav ul {
+  width: 100%;
+  height: inherit;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-header nav ul li{
-    border: 2px solid transparent;
+header nav ul li {
+  border: 2px solid transparent;
 }
 
-header nav ul li a{
-    display: block;
-    padding: 5px 15px;
-    text-decoration: none;
-    font-weight: 800;
-    letter-spacing: 1.2px;
-    font-size: 1.2rem;
-    color: #FFFFFF;
-    text-transform: capitalize;
-    transition: all 0.5s;
-    font-family: "Inter",-apple-system,"Nunito",BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
+header nav ul li a {
+  display: block;
+  padding: 5px 15px;
+  text-decoration: none;
+  font-weight: 800;
+  letter-spacing: 1.2px;
+  font-size: 1.2rem;
+  color: #ffffff;
+  text-transform: capitalize;
+  transition: all 0.5s;
+  font-family: "Inter", -apple-system, "Nunito", BlinkMacSystemFont, "Segoe UI",
+    Roboto, sans-serif;
 }
 
-header nav ul li a:hover{
-    transform: scale(1.1);
-    border-radius: 15px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.6);
-    color: black;
+header nav ul li a:hover {
+  transform: scale(1.1);
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.6);
+  color: black;
 }
 
-footer{
-    min-width: 25%;
-    height: 60px;
-
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px 16px 0px 0px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1.3px solid rgba(255, 255, 255, 0.3);
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+main {
+  width: 80%;
+  max-width: 1440px;
+  height: 560px;
+  margin: 0 auto;
 }
 
-footer > p{
-    font-weight: 300;
-    font-size: 1.2rem;
-    color: #FFFFFF;
-    text-transform: capitalize;
+main > h2{
+  text-align: center;
+  font-size: 1.7rem;
+  margin-bottom: 30px;
 }
 
-footer > p > a{
-    text-decoration: none;
-    color: #FFFFFF;
-    font-weight: bold;
+main > ul > li {
+  cursor: pointer;
+  margin: 20px 0px;
+}
+
+#tareas {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 10px;
+}
+
+#input-tareas {
+  width: 100%;
+  max-width: 300px;
+  margin: 10px 0px;
+  height: 30px;
+  padding: 12px;
+  border-radius: 12px 0px 0px 12px;
+  border: 1.5px solid lightgrey;
+  outline: none;
+  -webkit-transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  -webkit-box-shadow: 0px 0px 20px -18px;
+  box-shadow: 0px 0px 20px -18px;
+}
+
+#input-tareas:hover {
+  border: 2px solid lightgrey;
+  -webkit-box-shadow: 0px 0px 20px -17px;
+  box-shadow: 0px 0px 20px -17px;
+}
+
+#input-tareas:focus {
+  border: 2px solid royalblue;
+}
+
+#button-tareas{
+  height: 30px;
+  display: block;
+  padding: 0px 10px;
+  border-radius: 0px 12px 12px 0px;
+  border: 1.5px solid lightgrey;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+#tareas-list {
+  overflow-y: auto;
+  max-height: 400px;
+  margin-top: 20px;
+  box-sizing: border-box;
+}
+
+#tareas-list::-webkit-scrollbar {
+  width: 6px;
+  /* display: none; TODO Esconder scroll en el proximo recoded*/
+}
+
+#tareas-list::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+#tareas-list::-webkit-scrollbar-thumb {
+  background-color: royalblue;
+}
+
+#tareas-list::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+#tareas-list > ul{
+  list-style-type: none;
+}
+
+#tareas-list > ul > li{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 13px;
+}
+
+#tareas-list > ul > li:nth-child(odd){
+  background-color: #ffffff;
+}
+
+#tareas-list > ul > li:nth-child(even){
+  background-color: grey;
+}
+
+.btn-delete{
+  border: none;
+  background-color: transparent;
+  font-size: 1.5rem;
+}
+
+.btn-delete:hover{
+  color: #ff1361;
+  cursor: pointer;
 }
