Recoded CSS, en proceso

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -120,111 +120,10 @@ main {
   margin: 0 auto;
 }
 
-main > h2{
-  text-align: center;
-  font-size: 1.7rem;
-  margin-bottom: 30px;
-}
-
-main > ul > li {
-  cursor: pointer;
-  margin: 20px 0px;
-}
-
-#tareas {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 0px 10px;
-}
-
-#input-tareas {
-  width: 100%;
-  max-width: 300px;
-  margin: 10px 0px;
-  height: 30px;
-  padding: 12px;
-  border-radius: 12px 0px 0px 12px;
-  border: 1.5px solid lightgrey;
-  outline: none;
-  -webkit-transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  -webkit-box-shadow: 0px 0px 20px -18px;
-  box-shadow: 0px 0px 20px -18px;
-}
-
-#input-tareas:hover {
-  border: 2px solid lightgrey;
-  -webkit-box-shadow: 0px 0px 20px -17px;
-  box-shadow: 0px 0px 20px -17px;
-}
-
-#input-tareas:focus {
-  border: 2px solid royalblue;
-}
-
-#button-tareas{
-  height: 30px;
-  display: block;
-  padding: 0px 10px;
-  border-radius: 0px 12px 12px 0px;
-  border: 1.5px solid lightgrey;
-  background-color: #f1f1f1;
-  cursor: pointer;
-}
-
-#tareas-list {
-  overflow-y: auto;
-  max-height: 400px;
-  margin-top: 20px;
-  box-sizing: border-box;
-}
-
-#tareas-list::-webkit-scrollbar {
-  width: 6px;
-  /* display: none; TODO Esconder scroll en el proximo recoded*/
-}
-
-#tareas-list::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-}
-
-#tareas-list::-webkit-scrollbar-thumb {
-  background-color: royalblue;
-}
-
-#tareas-list::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
-}
-
-#tareas-list > ul{
-  list-style-type: none;
-}
-
-#tareas-list > ul > li{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 13px;
-}
-
-#tareas-list > ul > li:nth-child(odd){
-  background-color: #ffffff;
-}
-
-#tareas-list > ul > li:nth-child(even){
-  background-color: grey;
-}
-
-.btn-delete{
-  border: none;
-  background-color: transparent;
-  font-size: 1.5rem;
-}
-
-.btn-delete:hover{
-  color: #ff1361;
-  cursor: pointer;
+/*
+Password Generator
+Error message
+*/
+.msg-error-hidden{
+  display: none;
 }
