--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,5 +1,7 @@
+/*Iconos de Bootstrap */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
+/*CSS GENERALES*/
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +16,7 @@ html {
   display: none;
 }
 
+/*Efecto de fondo con movimiento del fondo*/
 .contenedor {
   width: 100vw;
   height: 100vh;
@@ -42,6 +45,7 @@ html {
   }
 }
 
+/*Contenedor de la aplicación y contenedor principal de la misma*/
 .app {
   max-width: 1400px;
   width: 80vw;
@@ -59,7 +63,8 @@ html {
   justify-content: space-between;
 }
 
-header {
+/*Cabecera del sitio*/
+#Cabecera{
   width: 100%;
   height: 60px;
   background: rgba(255, 255, 255, 0.2);
@@ -71,13 +76,13 @@ header {
   border-bottom: none;
 }
 
-header nav {
+#Cabecera > nav{
   width: 80%;
   margin: 0 auto;
   height: inherit;
 }
 
-header nav ul {
+#Cabecera > nav > ul {
   width: 100%;
   height: inherit;
   list-style-type: none;
@@ -87,11 +92,11 @@ header nav ul {
   justify-content: space-evenly;
 }
 
-header nav ul li {
+#Cabecera > nav > ul > li{
   border: 2px solid transparent;
 }
 
-header nav ul li a {
+#Cabecera > nav > ul > li > a {
   display: block;
   padding: 5px 15px;
   text-decoration: none;
@@ -105,7 +110,9 @@ header nav ul li a {
     Roboto, sans-serif;
 }
 
-header nav ul li a:hover {
+#cabecera > nav > ul > li > a:hover,
+#cabecera > nav > ul > li > a:active,
+#cabecera > nav > ul > li > a:focus{
   transform: scale(1.1);
   border-radius: 15px;
   background-color: #ffffff;
@@ -113,16 +120,52 @@ header nav ul li a:hover {
   color: black;
 }
 
-main {
+/*Main css*/
+#Contenido-Principal {
   width: 80%;
   max-width: 1440px;
   height: 560px;
   margin: 0 auto;
 }
 
+#Contenido-Principal > ul > li {
+  cursor: pointer;
+  margin: 20px 0px;
+}
+
+/*Footer CSS*/
+footer{
+  width: 100%;
+  max-width: 1400px;
+  height: 60px;
+}
+
+footer > div{
+  width: 80%;
+  margin: 0 auto;
+  height: inherit;
+  border-radius: 16px 16px 0px 0px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px 16px 0px 0px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1.3px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
+}
+
+footer > div > p{
+  text-align: center;
+  line-height: 60px;
+  
+}
+
+/*Componente 1*/
+
+/*Componente 2*/
+
 /*
-Password Generator
-Error message
+Password Generator | Error message
 */
 .msg-error-hidden{
   display: none;
