--- a/res/css/style.css
+++ b/res/css/style.css
@@ -161,7 +161,56 @@ footer > div > p{
 }
 
 /*Componente 1*/
+#Tareas-Container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 10px;
+}
 
+#Tareas-Container > #input-tareas {
+  width: 100%;
+  max-width: 300px;
+  height: 30px;
+  padding: 12px;
+  margin: 10px 0px;
+  border-radius: 12px 0px 0px 12px;
+  border: 1.5px solid lightgrey;
+  outline: none;
+  -webkit-transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  -webkit-box-shadow: 0px 0px 20px -18px;
+  box-shadow: 0px 0px 20px -18px;
+}
+
+#Tareas-Container > #button-tareas{
+  height: 30px;
+  display: block;
+  padding: 0px 10px;
+  border-radius: 0px 12px 12px 0px;
+  border: 1.5px solid lightgrey;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  color: black;
+}
+
+/*Contenedor de tareas creadas y/o existentes*/
+#Tareas-Mostrar{
+  margin-top: 20px;
+}
+
+#Tareas-Mostrar > ul{
+  list-style-type: none;
+}
+
+#Tareas-Mostrar > ul > li{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
 /*Componente 2*/
 
 /*
