--- a/res/css/style.css
+++ b/res/css/style.css
@@ -211,6 +211,21 @@ footer > div > p{
   justify-content: space-between;
   padding: 10px;
 }
+
+#Tareas-Mostrar > ul > li:nth-child(odd),
+#Tareas-Mostrar > ul > li:nth-child(even){
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1.3px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
+  border-radius: 0px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+#Tareas-Mostrar > ul > li:nth-child(even){
+  background-color: rgba(255, 255, 255, 0);
+}
 /*Componente 2*/
 
 /*
