--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,6 +1,3 @@
-/*Iconos de Bootstrap */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
-
 /*CSS GENERALES*/
 * {
   margin: 0;
@@ -225,6 +222,19 @@ footer > div > p{
 
 #Tareas-Mostrar > ul > li:nth-child(even){
   background-color: rgba(255, 255, 255, 0);
+}
+
+#Tareas-Mostrar > ul > li > .borrar-tarea{
+  border: none;
+  padding: 5px;
+  background-color: transparent;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#Tareas-Mostrar > ul > li > .borrar-tarea:hover{
+  transform: scale(1.1);
+  color: crimson;
 }
 /*Componente 2*/
 
