--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -107,9 +107,9 @@ html {
     Roboto, sans-serif;
 }
 
-#cabecera > nav > ul > li > a:hover,
-#cabecera > nav > ul > li > a:active,
-#cabecera > nav > ul > li > a:focus{
+#Cabecera > nav > ul > li > a:hover,
+#Cabecera > nav > ul > li > a:active,
+#Cabecera > nav > ul > li > a:focus{
   transform: scale(1.1);
   border-radius: 15px;
   background-color: #ffffff;
@@ -262,6 +262,7 @@ footer > div > p{
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
+
 /*
 Password Generator | Error message
 */
