--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -263,6 +263,88 @@ footer > div > p{
   -webkit-backdrop-filter: blur(5px);
 }
 
+#password-controls{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#input-password{
+  width: 100%;
+  max-width: 300px;
+  height: 30px;
+  padding: 12px;
+  margin: 10px 0px;
+  border-radius: 12px 0px 0px 12px;
+  border: 1.5px solid lightgrey;
+  outline: none;
+  -webkit-transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  -webkit-box-shadow: 0px 0px 20px -18px;
+  box-shadow: 0px 0px 20px -18px;
+}
+
+#button-generar{
+  height: 30px;
+  padding: 0px 10px;
+  border-radius: 0px 12px 12px 0px;
+  border: 1.5px solid lightgrey;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  color: black;
+}
+
+#Options-Container{
+  width: 100%;
+  min-height: 300px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#Options-Container > .Options-Row{
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: rgba(255, 255, 255, 0);
+  border: 1.3px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
+  border-radius: 0px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+#Options-Range{
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  margin: 30px 0px;
+}
+
+#Options-Range > div{
+  display: flex;
+  flex-direction: column;
+}
+
+#Options-Range > div > label{
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+#Options-Range > div > input[type="range"]{
+  margin: 10px 0px;
+}
+
 /*
 Password Generator | Error message
 */
