--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -296,6 +296,22 @@ footer > div > p{
   color: black;
 }
 
+#Password-Container > span{
+  padding: 10px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: crimson;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1.3px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
+  border-radius: 0px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
 #Options-Container{
   width: 100%;
   min-height: 300px;
