--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -296,14 +296,15 @@ footer > div > p{
   color: black;
 }
 
-#Password-Container > span{
+#Password-Container > span,
+#Tareas > span{
   padding: 10px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   color: crimson;
   font-weight: bold;
   text-transform: uppercase;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.5);
   border: 1.3px solid rgba(255, 255, 255, 0.3);
   border-bottom: none;
   border-radius: 0px;
@@ -366,4 +367,24 @@ Password Generator | Error message
 */
 .msg-error-hidden{
   display: none;
+}
+
+.msg-error-visible{
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 10px auto;
+  text-align: center;
+}
+
+/*Componente contacto*/
+#contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 15px;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 }
